# sonic-platform-daemons

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  pyproject.toml
sonic-chassisd/: BUILD.bazel
sonic-chassisd/tests/: BUILD.bazel
sonic-ledd/: BUILD.bazel
sonic-ledd/tests/: BUILD.bazel
sonic-pcied/: BUILD.bazel
sonic-pcied/tests/: BUILD.bazel
sonic-pcied/tests/mocked_libs/swsscommon/: swsscommon.py
sonic-psud/: BUILD.bazel
sonic-psud/tests/: BUILD.bazel
sonic-sensormond/: BUILD.bazel
sonic-sensormond/tests/: BUILD.bazel
sonic-stormond/: BUILD.bazel
sonic-stormond/tests/: BUILD.bazel
sonic-syseepromd/: BUILD.bazel
sonic-syseepromd/tests/: BUILD.bazel
sonic-thermalctld/: BUILD.bazel
sonic-thermalctld/tests/: BUILD.bazel
sonic-xcvrd/: BUILD.bazel
sonic-xcvrd/tests/: BUILD.bazel
sonic-ycabled/: BUILD.bazel  run_protoc.py
sonic-ycabled/tests/: BUILD.bazel
