load("@aspect_rules_py//py:defs.bzl", "py_library")

exports_files(glob(["xcvrd/**/*.py"]))

py_library(
    name = "xcvrd",
    srcs = glob(["xcvrd/**/*.py"]),
    imports = ["."],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "xcvrd_files",
    srcs = glob(["xcvrd/**/*.py"]),
    visibility = ["//visibility:public"],
)

