load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")

py_library(
    name = "mocked_libs",
    srcs = glob(["mocked_libs/**/*.py"]) + glob(["*.py"], exclude = ["test_*.py"]),
    imports = [
        ".",
        "mocked_libs",
    ],
)

# Export swsscommon mock for use by other daemon tests
py_library(
    name = "swsscommon_mock",
    srcs = [
        "mocked_libs/swsscommon/__init__.py",
        "mocked_libs/swsscommon/swsscommon.py",
    ],
    imports = ["mocked_libs"],
    visibility = ["//visibility:public"],
)

PYTEST_DEPS = [
    "@daemons_pip//pytest",
    "@daemons_pip//mock",
]

TEST_DEPS = PYTEST_DEPS + [
    ":mocked_libs",
    "//sonic-pcied:pcied",
    "@sonic-py-common//:sonic-py-common",
    "@sonic-py-swsssdk//:swsssdk",
    "@daemons_pip//redis",
]

py_test(
    name = "test_pcied",
    srcs = ["test_pcied.py"],
    args = ["--import-mode=importlib", "-v"],
    pytest_main = True,
    deps = TEST_DEPS,
)

py_test(
    name = "test_DaemonPcied",
    srcs = ["test_DaemonPcied.py"],
    args = ["--import-mode=importlib", "-v"],
    pytest_main = True,
    deps = TEST_DEPS,
)

test_suite(
    name = "all_tests",
    tests = [
        ":test_pcied",
        ":test_DaemonPcied",
    ],
)
