load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")

py_library(
    name = "mocked_libs",
    srcs = glob(
        ["mocked_libs/**/*.py"],
        exclude = ["test_*.py"],
    ) + [
        "__init__.py",
        "mock_platform.py",
    ],
    imports = [
        ".",
        "mocked_libs",
    ],
)

PYTEST_DEPS = [
    "@daemons_pip//pytest",
    "@daemons_pip//mock",
]

# Common test dependencies
TEST_DEPS = PYTEST_DEPS + [
    ":mocked_libs",
    "//sonic-psud:psud",
    "@sonic-platform-common//sonic_platform_base",
    "@sonic-py-common//:sonic-py-common",
    "@sonic-py-swsssdk//:swsssdk",
    "@daemons_pip//redis",
]

py_test(
    name = "test_psud",
    srcs = ["test_psud.py"],
    args = ["--import-mode=importlib", "-v"],
    pytest_main = True,
    deps = TEST_DEPS,
)

py_test(
    name = "test_PsuStatus",
    srcs = ["test_PsuStatus.py"],
    args = ["--import-mode=importlib", "-v"],
    pytest_main = True,
    deps = TEST_DEPS,
)

py_test(
    name = "test_PsuChassisInfo",
    srcs = ["test_PsuChassisInfo.py"],
    args = ["--import-mode=importlib", "-v"],
    pytest_main = True,
    deps = TEST_DEPS,
)

py_test(
    name = "test_DaemonPsud",
    srcs = ["test_DaemonPsud.py"],
    args = ["--import-mode=importlib", "-v"],
    pytest_main = True,
    deps = TEST_DEPS,
)

test_suite(
    name = "all_tests",
    tests = [
        ":test_psud",
        ":test_PsuStatus",
        ":test_PsuChassisInfo",
        ":test_DaemonPsud",
    ],
)
