load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")

py_library(
    name = "mocked_libs",
    # Exclude swsscommon from mocked_libs since it imports swsssdk
    srcs = glob(
        ["mocked_libs/**/*.py"],
        exclude = ["mocked_libs/swsscommon/**"],
    ) + glob(["*.py"], exclude = ["test_*.py"]),
    imports = [
        ".",
        "mocked_libs",
    ],
)

PYTEST_DEPS = [
    "@daemons_pip//pytest",
    "@daemons_pip//mock",
]

TEST_DEPS = PYTEST_DEPS + [
    ":mocked_libs",
    "//sonic-pcied/tests:swsscommon_mock",
    "//sonic-syseepromd:syseepromd",
    "@sonic-py-common//:sonic-py-common",
    "@sonic-py-swsssdk//:swsssdk",
    "@daemons_pip//redis",
]

py_test(
    name = "test_syseepromd",
    srcs = ["test_syseepromd.py"],
    args = ["--import-mode=importlib", "-v"],
    pytest_main = True,
    deps = TEST_DEPS,
)

test_suite(
    name = "all_tests",
    tests = [
        ":test_syseepromd",
    ],
)
