load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")

py_library(
    name = "mocked_libs",
    srcs = glob(["mocked_libs/**/*.py"]) + glob(["*.py"], exclude = ["test_*.py"]),
    imports = [
        ".",
        "mocked_libs",
    ],
)

PYTEST_DEPS = [
    "@daemons_pip//pytest",
    "@daemons_pip//mock",
]

TEST_DEPS = PYTEST_DEPS + [
    ":mocked_libs",
    "//sonic-thermalctld:thermalctld",
    "@sonic-platform-common//sonic_platform_base",
    "@sonic-platform-common//sonic_platform_base/sonic_thermal_control",
    "@sonic-py-common//:sonic-py-common",
    "@sonic-py-swsssdk//:swsssdk",
    "@daemons_pip//redis",
]

py_test(
    name = "test_thermalctld",
    srcs = ["test_thermalctld.py"],
    args = ["--import-mode=importlib", "-v"],
    pytest_main = True,
    deps = TEST_DEPS,
)

test_suite(
    name = "all_tests",
    tests = [
        ":test_thermalctld",
    ],
)
