load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")

py_library(
    name = "mocked_libs",
    srcs = glob(["*.py"], exclude = ["test_*.py"]),
    data = glob(["*.json", "*.ini"]),
    imports = ["."],
)

PYTEST_DEPS = [
    "@daemons_pip//pytest",
    "@daemons_pip//mock",
]

TEST_DEPS = PYTEST_DEPS + [
    ":mocked_libs",
    "//sonic-pcied/tests:swsscommon_mock",
    "//sonic-xcvrd:xcvrd",
    "@sonic-platform-common//sonic_platform_base",
    "@sonic-py-common//:sonic-py-common",
    "@sonic-py-swsssdk//:swsssdk",
    "@daemons_pip//redis",
]

py_test(
    name = "test_xcvrd",
    srcs = ["test_xcvrd.py"],
    args = ["--import-mode=importlib", "-v"],
    data = glob(["*.json", "*.ini"]),
    pytest_main = True,
    deps = TEST_DEPS,
)

test_suite(
    name = "all_tests",
    tests = [
        ":test_xcvrd",
    ],
)
